--- a/style.css
+++ b/style.css
@@ -5,11 +5,7 @@
             font-family: 'Palanquin Dark', sans-serif;
             background-color: #111;
             color: white;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+            text-align:center;
         }
         .main-content {
             text-align: center;
